# rocks-shim

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  __init__.py  pyproject.toml  run-docker-build.sh  test_sst_writer.py
cmake/: BuildRocksDB.cmake  BuildRocksDB.cmake.old
include/rocks_shim/: packed24_merge.hpp  rocks_shim.hpp
scripts/: .build-wheels.sh.swp  build-manylinux-wheels.sh  build-wheels-internal.sh  build-wheels.sh
src/cpp/: db.cc  module.cpp
tests/: smoke_test.py  wheelcheck.sh
