[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "rocks-shim"
version = "0.1.0"
description = "Python bindings for RocksDB with bundled library"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[tool.scikit-build]
wheel.packages = []
wheel.platlib = false
cmake.build-type = "Release"
cmake.version = ">=3.20"
build.verbose = true

wheel.install-dir = "rocks_shim"

cmake.args = [
    "-DCMAKE_INSTALL_RPATH=$ORIGIN:$ORIGIN/.libs",
    "-DCMAKE_INSTALL_RPATH_USE_LINK_PATH=OFF",
    "-DCMAKE_BUILD_WITH_INSTALL_RPATH=ON",
    "-DCMAKE_SKIP_BUILD_RPATH=ON"
]